--- a/guitar/scss/_vars&&templates.scss
+++ b/guitar/scss/_vars&&templates.scss
@@ -6,22 +6,16 @@ $basic-font: 'Poppins', sans-serif; //font
 $secondary-font: 'Cal Sans', sans-serif; //font
 
 //---------------COLORS--------------------
-$black-color: #000; // black color
-$white-color: rgba(255, 255, 255, 0.96); // white color
+$black-color: rgb(18, 18, 18); // black color
+$white-color: rgb(255, 255, 255); // white color
 $orange-color: rgb(255, 100, 40); // orange color
 $orange-hover-color: rgb(245, 67, 0); // orange hover color
-$gray-header-color: rgba(18, 18, 18, 0.4); // gray header color
 $gray-color: rgb(134, 134, 134); // gray color
 $gray-second-color: rgb(102, 102, 102); // gray second color
-$hover-color: rgb(75, 88, 190);
-$second-hover-color: rgba(227, 227, 227, 0.44);
 
-//--------------LINER GRADIENTS------------
-$liner-gradient: linear-gradient(126.56deg, rgb(255, 182, 41) 20.708%,rgb(255, 218, 86) 66.546%,rgb(255, 215, 166) 111.085%);
 //----------------SIZE---------------------
 $basic-lh: 1.2; //line height
-//$full-percentage: 100%;
-$basic-fz: toRem(18); //basic font size
+$basic-fz: toRem(16); //basic font size
 
 
 //----------------OTHER--------------------
@@ -33,6 +27,29 @@ $L-mob-bp: toEm(767.98); // Large mobile breakpoint
 //$second-mobile-breakpoint: toEm(502.98);
 $M-mob-bp: toEm(510.98); // Medium mobile breakpoint
 $S-mob-bp: toEm(320.98); // Small mobile breakpoint
+
+//-------------------MIXINS-------------------------------------
+//---------------------------------------------------------------
+$minWidth: 320;
+// Min page width
+$maxWidth: 1440;
+// Site width
+$maxWidthContainer: 1200;
+// Container width (0 = no restrictions)
+$containerPadding: 30;
+// Common container spacing
+// (30 = 15x left|right, 0 = no spacing)
+$containerWidth: $maxWidthContainer + $containerPadding;
+
+@mixin adaptiveValue($property, $startSize, $minSize, $keepSize: 0, $widthFrom: $containerWidth, $widthTo: $minWidth) {
+  @if ($startSize==0) {
+    $startSize: 0.000001;
+  }
+  @if ($minSize==0) {
+    $minSize: 0.000001;
+  }
+}
+
 //----------------------------------------------------------------
 //--------------------------Templates-----------------------------
 %photo-absolute {
@@ -45,8 +62,6 @@ $S-mob-bp: toEm(320.98); // Small mobile breakpoint
 
 %image-size {
   img {
-    //width: $full-percentage;
-    //height: $full-percentage;
     width: 100%;
     height: 100%;
   }
@@ -59,58 +74,41 @@ $S-mob-bp: toEm(320.98); // Small mobile breakpoint
   flex-wrap: wrap;
 }
 
-%hover-btn-yellow {
-  .button {
-    padding: toEm(19) toEm(34);
-    color: rgb(35, 33, 42);
-    font-family: $basic-font;
-    font-size: toRem(16);
-    font-weight: 600;
-    line-height: 1.3;
-    text-transform: capitalize;
-    transition: all 0.8s;
-    background: linear-gradient(126.56deg, rgb(255, 182, 41) -1.21%, rgb(255, 218, 86) 58.664%, rgb(255, 215, 166) 116.841%);
-    position: relative;
-    z-index: 5;
-    overflow: hidden;
+%dis-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: toRem(35);
+  row-gap: toRem(20);
+}
 
-    &:after {
-      content: '';
-      position: absolute;
-      z-index: -1;
-      pointer-events: none;
-      width: toRem(206);
-      height: toRem(206);
-      left: toRem(74);
-      right: toRem(-86);
-      top: toRem(-43);
-      bottom: toRem(-103);
-      border-radius: 50%;
-      background: $white-color;
-      opacity: 0;
-
-      transform: scaleX(0);
-      transform-origin: right;
-      transition: transform 0.6s, opacity 1.3s;
+%orange-hover {
+  @media (any-hover: hover) {
+    &:hover {
+      color: $orange-hover-color;
     }
+  }
+}
 
-    @media (any-hover: hover) {
-      &:hover::after {
-        content: '';
-        position: absolute;
-        width: toRem(206);
-        height: toRem(206);
-        left: toRem(74);
-        right: toRem(-86);
-        top: toRem(-43);
-        bottom: toRem(-103);
-        border-radius: 50%;
-        background: $white-color;
-        //transition: transform 0.6s, opacity 1.3s;
-        opacity: 1;
-        transform: scaleX(1);
+%card-hover {
+  @media (any-hover: hover) {
+    &:hover {
+      .card__title {
+        color: $orange-hover-color;
+        letter-spacing: toEm(0.5);
+      }
+
+      .card__price {
+        color: $orange-hover-color;
+      }
+
+      .card__image {
+        &:hover {
+          transform: scale(1.03);
+          opacity: 1;
+        }
       }
     }
   }
 }
+
 
